codigo python Concersao de TIpos.txt
Conversao de Tipos

>>> a = 2
>>> b ='3'
>>> print(type(a))
<class 'int'>
>>> print(type(b))
<class 'str'>
>>> print(a + int(b))
5
>>> print(str(a) + b)
23
>>> type(str(a))
<class 'str'>
>>> print('2 legal'))
  File "<stdin>", line 1
    print('2 legal'))
                    ^
SyntaxError: unmatched ')'
>>> 
>>> a = 2
>>> b ='3'
>>> print(type(a))
<class 'int'>
>>> print(type(b))
<class 'str'>
>>> print(a + int(b))
5
>>> print(str(a) + b)
23
>>> type(str(a))
<class 'str'>
>>> print('2 legal'))
  File "<stdin>", line 1
    print('2 legal'))
                    ^
SyntaxError: unmatched ')'
>>> 
SyntaxError: unmatched ')'
>>> print(2 + float('3.4'))
5.4
>>> 
